--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mmbt/twrnc",
-  "version": "4.6.2",
+  "name": "twrnc",
+  "version": "4.6.1",
   "description": "simple, expressive API for tailwindcss + react-native",
   "author": "Jared Henderson <jared@netrivet.com>",
   "module": "dist/esm/index.js",
